<resources>
    <string name="app_name">ehust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="news_title">Thông báo: Công tác đào tạo và kế hoạch học tập từ ngày 27/9/2021</string>
    <string name="item_news_content">Kính gửi: Các đơn vị; Cán bộ, viên chức, người học và khách đến Trường: Tình hình lây nhiễm dịch COVID-19 trong cộng đồng hiện nay cơ bản được kiểm soát.</string>
    <string name="news_content">Kính gửi: Các đơn vị; Cán bộ, viên chức, người học và khách đến Trường.\n Tình hình lây nhiễm dịch COVID-19 trong cộng đồng hiện nay cơ bản được kiểm soát. Theo Chỉ thị số 22/UBND Thành phố Hà Nội ngày 21/9/2021, để tăng cường công tác phòng chống dịch năm học mới 2021-2022, Ban Giám hiệu yêu cầu tất cả cán bộ viên chức và các đơn vị toàn Trường thực hiện các nội dung sau:\n 1. Triển khai dạy và học trực tuyến từ tuần 1 năm học 2021-2022 (bắt đầu học kỳ vào ngày 27/9 đối với K65 trở về trước) theo thông báo cụ thể của Phòng Đào tạo; Sinh viên, học viên cao học, NCS được tiến hành thí nghiệm nghiên cứu phục vụ khóa luận/đồ án tốt nghiệp, luận văn và luận án; CBVC được tiến hành nghiên cứu với điều kiện không đồng thời quá 20 người trong một phòng thí nghiệm hay 50 % vị trí làm việc, đảm bảo an toàn phòng, chống dịch và được đơn vị kiểm soát;\n 2. Trưởng đơn vị bố trí CBVC làm việc trực tuyến tối đa theo nguyên tắc: 50 % tại đơn vị và 50 % trực tuyến tại nhà. Người học, CBVC từ các tỉnh ngoài về Hà Nội phải thực hiện khai báo y tế và nơi cư trú. Người học, CBVC về từ địa phương \n thực hiện giãn cách theo Chỉ thị 16/CT-TTg của Thủ tướng 3. CBVC và khách đến làm việc với Nhà trường thực hiện nghiêm nguyên tắc 5K của Bộ Y tế, thực hiện quét mã QR code bằng ứng dụng Bluezone/SSKĐT trước khi vào các khuôn viên Trường tại các điểm cổng (2 Cổng Đại Cồ Việt, Cổng Parabol, Cổng Trần Đại Nghĩa, Nhà B1, Cổng Ký túc xá);\n 4. CBVC bắt buộc hoàn thành tiêm chủng 2 mũi vaccine phòng COVID-19 theo các đợt tiêm từ Trường;\n 5. Tiếp tục dừng các hoạt động thể thao trong khuôn viên KTX, sân vận động, nhà thi đấu; sinh viên trong KTX hạn chế tiếp xúc với bên ngoài; \n 6. Tiếp tục dừng các điểm cung cấp dịch vụ không thiết yếu trong các khuôn viên Trường, dừng các hoạt động hội họp tập trung trên 20 người trong 1 phòng (trường hợp thực sự cần thiết do Hiệu trưởng quyết định và đảm bảo các biện pháp phòng dịch); \n 7. Đối với các công trình xây dựng, sửa chữa: đảm bảo yêu cầu an toàn phòng, chống dịch theo hướng dẫn của Sở Xây dựng HN (theo văn bản số 3373/BXD-GD ngày 23/8/2021 của Bộ Xây dựng);\n 8. Phòng An ninh phối hợp với Công ty Bảo vệ Hùng Vương tăng cường giám sát khách từ các cổng ra vào, thực hiện quét mã QR code bằng ứng dụng Bluezone/SSKĐT để truy vết.\n Đề nghị các đơn vị, cán bộ viên chức, người học và khách đến Trường thực hiện nghiêm túc các nội dung trên cho đến khi có thông báo mới.\n\n BAN CHỈ ĐẠO PHÒNG, CHỐNG DỊCH COVID-19</string>
    <string name="label">label</string>
    <string name="home_title">Trang chủ</string>
    <string name="search_title">Tra cứu thông tin</string>
    <string name="new_task_title">Tạo Task</string>
    <string name="ds_lop">Thông tin lớp sinh viên</string>
    <string name="new_title">Thông báo</string>
    <string name="profile_title">Thông tin cá nhân</string>
    <string name="ds_projects">Danh sách đồ án</string>
    <string name="new_title_detail">Thông báo chi tiết</string>
    <string name="schedule">Thời khóa biểu</string>
    <string name="title_search_schedule">Tra cứu thời khóa biểu</string>
    <string name="title_project">Đồ án</string>
    <string name="title_information_project">Thông tin chi tiết đồ án</string>
    <string name="title_class_student">Lớp sinh viên</string>
    <string name="title_information_class">Thông tin lớp sinh viên</string>
    <string name="title_id_user">Mã sinh viên</string>
    <string name="title_class">Lớp</string>
    <string name="title_course">Khóa</string>
    <string name="title_institute">Khoa/ Viện</string>
    <string name="title_email">Email</string>
    <string name="title_information_user">Thông tin cá nhân</string>
    <string name="title_schedule">Lịch hôm nay</string>
    <string name="title_detail_user">Chi tiết</string>
    <string name="dialog_delete_confirmation">Delete this event?</string>
    <string name="select_dates">Select Dates</string>
    <string name="state_descr_selected">Selected</string>
    <string name="state_descr_not_selected">Not selected</string>
    <string name="click_label_select">select</string>
    <string name="calendar_select_dates_title">Select Dates</string>
    <string name="cd_back">Back</string>
    <string name="title">Chọn thời gian</string>
    <string name="time_prefix"><![CDATA[>>]]></string>
    <string name="time_suffix"><![CDATA[<<]]></string>
    <string name="selected_time_format">%1$s:%2$s</string>
    <string name="selected_date_format">%1$d:%2$d:%3$d</string>
    <string name="location_section_address">address</string>
</resources>