<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userItem"
            type="com.prdcv.ehust.model.User" />
        <import type="com.prdcv.ehust.model.Role"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.121"
        visible="@{userItem.roleId == Role.ROLE_STUDENT}">
        <com.loopeer.shadow.ShadowView
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/boder_edit_text"
            android:padding="20sp"
            app:cardCornerRadius="24dp"
            app:cardUseCompatPadding="true"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:shadowColor="@color/text_color_shadow"
            app:shadowMargin="10dp"
            app:shadowRadius="14dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_information_user"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_mClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/title_id_user"
                    android:textColor="#47525E"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@{String.valueOf(userItem.id)}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_mClass"
                    app:layout_constraintTop_toTopOf="@+id/tv_mClass"
                    tools:text="716323" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tx_code_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_class"
                    android:textColor="#47525E"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rv_content_code_course"
                    app:layout_constraintStart_toStartOf="@+id/tv_mClass"
                    app:layout_constraintTop_toTopOf="@+id/rv_content_code_course" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rv_content_code_course"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{userItem.grade}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView9"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView9"
                    tools:text="Công nghệ thông tin 11" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_course"
                    android:textColor="#47525E"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/contentInstitute"
                    app:layout_constraintStart_toStartOf="@+id/tx_code_course"
                    app:layout_constraintTop_toTopOf="@+id/contentInstitute" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contentInstitute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{String.valueOf(userItem.course)}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/rv_content_code_course"
                    app:layout_constraintTop_toBottomOf="@+id/rv_content_code_course"
                    tools:text="K62" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_institute"
                    android:textColor="#47525E"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/contentUnit"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView11"
                    app:layout_constraintTop_toTopOf="@+id/contentUnit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contentUnit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{userItem.instituteOfManagement}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/contentInstitute"
                    app:layout_constraintTop_toBottomOf="@+id/contentInstitute"
                    tools:text="Viện Công nghệ Thông tin và Truyền thông" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_email"
                    android:textColor="#47525E"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_content_email"
                    app:layout_constraintStart_toStartOf="@+id/titleUnit"
                    app:layout_constraintTop_toTopOf="@+id/tv_content_email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_content_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{userItem.email}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/contentUnit"
                    app:layout_constraintTop_toBottomOf="@+id/contentUnit"
                    tools:text="ha.dt173086@sis.hust .edu.vn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.loopeer.shadow.ShadowView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>