<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="role"
            type="com.prdcv.ehust.model.Role" />
        <import type="com.prdcv.ehust.model.Role" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        visible="@{role == Role.ROLE_STUDENT}">

        <com.loopeer.shadow.ShadowView
            android:id="@+id/cd_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="24dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:shadowColor="@color/text_color_shadow"
            android:padding="10dp"
            app:cornerRadius="10dp"
            app:shadowMargin="10dp"
            app:shadowRadius="14dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_scheduler"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_scheduler"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/ic_scheduler"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/schedule"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:text="@string/title_search_schedule"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.loopeer.shadow.ShadowView>

        <com.loopeer.shadow.ShadowView
            android:id="@+id/cd_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/cd_schedule"
            app:cardUseCompatPadding="true"
            app:shadowColor="@color/text_color_shadow"
            android:padding="10dp"
            app:cornerRadius="10dp"
            app:shadowMargin="10dp"
            app:shadowRadius="14dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_project"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_project"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/ic_project"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_project"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_information_project"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.loopeer.shadow.ShadowView>

        <com.loopeer.shadow.ShadowView
            android:id="@+id/cd_class_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/cd_project"
            app:cardUseCompatPadding="true"
            app:shadowColor="@color/text_color_shadow"
            android:padding="10dp"
            app:cornerRadius="10dp"
            app:shadowMargin="10dp"
            app:shadowRadius="14dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_class"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/ic_class"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/title_class_student"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_information_class"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.loopeer.shadow.ShadowView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

